--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.5",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
