--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
@@ -24,6 +26,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.3.1",
     "use-sound": "^5.0.0"
   },
